--- a/frontend/src/app/components/profile/tasks/tasks.component.html
+++ b/frontend/src/app/components/profile/tasks/tasks.component.html
@@ -110,7 +110,16 @@
               <th scope="col"></th>
             </tr>
           </thead>
-          <tbody>
+          <tbody *ngIf="!areTasksLoaded">
+            <tr>
+              <td colspan="5" class="text-center">
+                <div class="spinner-border" role="status">
+                  <span class="sr-only">Loading...</span>
+                </div>
+              </td>
+            </tr>
+          </tbody>
+          <tbody *ngIf="areTasksLoaded">
             <tr *ngIf="(homework$ | async)?.length == 0">
               <td colspan="5" class="text-center">
                 Ваш вчитель поки що не додав завдання 🥳
