feature: privacy-policy

--- a/frontend/src/app/components/footer/footer.component.html
+++ b/frontend/src/app/components/footer/footer.component.html
@@ -1,9 +1,5 @@
 <div id="wrapper">
   <p class="text-center m-0">© 2024 Vedis</p>
 
-  <div id="links" class="d-flex gap-1">
-    <a routerLink="">Політика конфедеційності</a>
-    <span> | </span>
-    <a routerLink="">Договір оферта</a>
-  </div>
+  <a routerLink="/privacy-policy">Політика конфедеційності</a>
 </div>
