update for prod

--- a/frontend/src/app/components/landing/social-media/social-media.component.html
+++ b/frontend/src/app/components/landing/social-media/social-media.component.html
@@ -1,4 +1,4 @@
-<div style="background-color: #fff;" id="hotline-wrapper">
+<div style="background-color: #fff" id="hotline-wrapper">
   <div id="socials-card">
     <h3 class="sub-heading">Зв'яжіться з нами</h3>
     <div id="socials-content">
@@ -10,7 +10,10 @@
 
       <div class="d-flex flex-column gap-5 py-3">
         <div class="contact">
-          <img class="contact-badge" src="../../../../assets/landing/social-media/msg.png" />
+          <img
+            class="contact-badge"
+            src="../../../../assets/landing/social-media/msg.png"
+          />
 
           <h4>Соціальні мережі</h4>
 
@@ -32,11 +35,14 @@
         </div>
 
         <div class="contact">
-          <img class="contact-badge" src="../../../../assets/landing/social-media/email.png" />
+          <img
+            class="contact-badge"
+            src="../../../../assets/landing/social-media/email.png"
+          />
           <h4>Пошта</h4>
           <div class="icons">
-            <a class="social-links" href="mailto:support@vedis.com.ua"
-              >support&#64;vedis.com.ua</a
+            <a class="social-links" href="mailto:support@vedis.study"
+              >support&#64;vedis.study</a
             >
           </div>
         </div>
